Fix #4046 - Prevent scrollbars for watch expression items (#4048)

--- a/src/components/SecondaryPanes/Expressions.css
+++ b/src/components/SecondaryPanes/Expressions.css
@@ -63,8 +63,8 @@
   position: relative;
 }
 
-.expression-container .close-btn {
-  display: none;
+.expression-content .tree-node {
+  overflow-x: hidden;
 }
 
 .expression-container:hover .close-btn {
